# tpumon

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tpumon.py
docs/: DESIGN.md  EDGETPU_COMPILATION.md  EDGETPU_COMPILER_AARCH64.md  SETUP.md  TPU_DEVELOPERS_GUIDE.md  compile_edgetpu.ipynb
examples/: classify.py
patches/: 0001-gasket-fix-build-for-kernel-6.12.patch  0002-gasket-pcie-interrupt-fallback-msix-msi-intx.patch  0003-gasket-add-intx-wire-interrupt-support.patch  0004-gasket-wire-int-hrtimer-polling.patch
regime/: __init__.py  data.py  infer.py  train.py
tests/: test_tpumon.py
